--- a/SortApp/SortApp.vcxproj
+++ b/SortApp/SortApp.vcxproj
@@ -10,6 +10,17 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Driver.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Sort.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="1to10.txt" />
+    <Text Include="1to100.txt" />
+    <Text Include="1to1000.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{87090371-8AFB-4522-AAEB-987D4DFDBDAF}</ProjectGuid>
     <RootNamespace>SortApp</RootNamespace>
@@ -63,8 +74,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
